option('max_physical_memory_allocators',  type: 'integer', min: 0x10, value: 0x20)
option('preallocate_pages',               type: 'integer', min: 50,   value: 0x100)
option('klog_size_pages',                 type: 'integer', min: 4,    value: 64)
option('cpuid_feature_buffer_size',       type: 'integer', min: 5,    value: 5)

option('debug_log_mmap',                  type: 'boolean', value: true)
option('debug_log_cpuid',                 type: 'boolean', value: true)
option('debug_log_acpi',                  type: 'boolean', value: true)
option('debug_log_pci',                   type: 'boolean', value: true)
option('debug_spinlock_dep',              type: 'boolean', value: true)
option('debug_stl_assert',                type: 'boolean', value: true)

option('slab_min_order',                  type: 'integer', min: 4,    value: 6)
option('slab_max_order',                  type: 'integer', max: 16,   value: 12)
option('slab_size_order',                 type: 'integer', min: 16,   value: 16)
